Wrote the first draft of the guide for a single network with dhcp server

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -16,6 +16,7 @@ pages:
 #- 'Concept': 'concept.md'
 - Getting Started:
   - 'Installation': 'installation.md'
+  - 'Single network with DHCP server': 'single-network-dhcp.md'
 - Support:
   - 'Community': 'community.md'
 
