Finished up the dhcp guide and set up the guides to follow each other nicely

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -18,6 +18,7 @@ pages:
 - Creating virtual networks:
   - 'Single network': 'single-network.md'
   - 'Single network with DHCP server': 'single-network-dhcp.md'
+  - 'Two networks': 'two-networks.md'
 - Configuration files: 'configuration-files.md'
 - Vnctl:
   - 'interfaces': 'vnctl-interfaces.md'
