--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -19,6 +19,7 @@ pages:
   - 'Single network': 'single-network.md'
   - 'Single network with DHCP server': 'single-network-dhcp.md'
   - 'Two networks': 'two-networks.md'
+  - 'Two network with router': 'two-networks-router.md'
 - Configuration files: 'configuration-files.md'
 - Vnctl:
   - 'interfaces': 'vnctl-interfaces.md'
