Changes to the installation guide after proof reading

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -27,6 +27,7 @@ pages:
   - 'vna.conf': 'configuration-files/vna.md'
   - 'vnctl.conf': 'configuration-files/vnctl.md'
 - Vnctl:
+  - 'datapaths' : 'vnctl/datapaths.md'
   - 'interfaces': 'vnctl/interfaces.md'
   - 'networks'  : 'vnctl/networks.md'
 - Debugging:
