Added the jargon dictionary to the mkdocs.yml file

--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -34,3 +34,4 @@ pages:
   - 'vnflows-monitor': 'debugging/vnflows-monitor.md'
   - 'troubleshooting': 'debugging/troubleshooting.md'
 - Community: 'community.md'
+- Jargon Dictionary: 'jargon-dictionary.md'
