--- a/integration_test/dataset/base.yml
+++ b/integration_test/dataset/base.yml
@@ -84,14 +84,14 @@ datapath_networks:
   - datapath_uuid: dp-1
     network_uuid: nw-public1
     interface_uuid: if-dp1eth0
-    broadcast_mac_address: "02:00:01:aa:01:01"
+    mac_address: "02:00:01:aa:01:01"
 
   - datapath_uuid: dp-2
     network_uuid: nw-public1
     interface_uuid: if-dp2eth0
-    broadcast_mac_address: "02:00:01:bb:01:01"
+    mac_address: "02:00:01:bb:01:01"
 
   - datapath_uuid: dp-3
     network_uuid: nw-public2
     interface_uuid: if-dp3eth0
-    broadcast_mac_address: "02:00:01:cc:01:01"
+    mac_address: "02:00:01:cc:01:01"
