--- a/docs/mkdocs.yml
+++ b/docs/mkdocs.yml
@@ -21,6 +21,8 @@ pages:
   - 'Single network with DHCP server': 'creating-virtual-networks/single-network-dhcp.md'
   - 'Two networks': 'creating-virtual-networks/two-networks.md'
   - 'Two network with router': 'creating-virtual-networks/two-networks-router.md'
+- Advanced Features:
+  - 'Filters': 'advanced-features/filters.md'
 - Debugging:
   - 'vnflows-monitor': 'debugging/vnflows-monitor.md'
   - 'Integration test': 'debugging/integration-test.md'
@@ -35,5 +37,6 @@ pages:
   - 'datapaths' : 'vnctl/datapaths.md'
   - 'interfaces': 'vnctl/interfaces.md'
   - 'networks'  : 'vnctl/networks.md'
+  - 'filters'   : 'vnctl/filters.md'
 - Community: 'community.md'
 - Jargon Dictionary: 'jargon-dictionary.md'
