--- a/vnet/Gemfile
+++ b/vnet/Gemfile
@@ -1,4 +1,3 @@
-
 source "http://rubygems.org"
 
 gem 'ffi-rzmq', "1.0.3"
@@ -25,7 +24,7 @@ gem "unicorn"
 gem "activesupport", '3.0.0' # Updating to 4.2.1 broke the unit tests.
 
 # trema and build requirement gems
-gem 'paper_house', '~>0.5.0'
+gem 'paper_house'
 gem 'rant', '>= 0.5.9', :git => 'https://github.com/axsh/rant.git'
 gem 'trema', :git=>'https://github.com/axsh/trema.git', :branch=>'wakame-edge'
 
@@ -35,10 +34,11 @@ group :development, :test do
   gem "rack-test"
   gem "fabrication", '2.9.8' # Updating to 2.13.2 broke the unit tests.
   gem 'database_cleaner'
-
   gem "coveralls"
-
   gem 'webmock'
-
   gem "pry-byebug"
+end
+
+group :metrics do
+  gem 'rubocop'
 end
