Fix Gemfile to pass all tests also on Ubuntu 14.04

--- a/vnet/Gemfile
+++ b/vnet/Gemfile
@@ -1,10 +1,9 @@
-
 source "http://rubygems.org"
 
-gem 'ffi-rzmq', "1.0.3"
+gem "ffi-rzmq", "1.0.3"
 gem "bit-struct", ">= 0.13.7"
-gem "celluloid"
-gem "celluloid-io"
+gem "celluloid", "0.16.0"
+gem "celluloid-io", "0.16.2"
 gem "dcell"
 gem "fuguta"
 gem "ipaddress"
@@ -30,7 +29,7 @@ gem 'rant', '>= 0.5.9', :git => 'https://github.com/axsh/rant.git'
 gem 'trema', :git=>'https://github.com/axsh/trema.git', :branch=>'wakame-edge'
 
 group :development, :test do
-  gem "rake"
+  gem "rake", "10.1.0"
   gem "rspec"
   gem "rack-test"
   gem "fabrication", '2.9.8' # Updating to 2.13.2 broke the unit tests.
