Added a configuration option to disable vndoctor

--- a/deployment/conf_files/etc/openvnet/common.conf
+++ b/deployment/conf_files/etc/openvnet/common.conf
@@ -40,3 +40,12 @@ db {
 #
 
 datapath_mac_group "mrg-dpg"
+
+#
+# vndoctor is a troubleshooting tool that connects to OpenVNet's processes and
+# has them inspect their own configuration, returning clues for what might be
+# causing problems in your OpenVNet environment.
+#
+# Setting this to false will stop OpenVNet processes from responding to vndoctor.
+#
+vndoctor_enabled true
