Add wanedge node

--- a/integration_test/config/itest.yml
+++ b/integration_test/config/itest.yml
@@ -2,7 +2,7 @@ specs_ext: [edge]
 nodes:
   webapi: [192.168.2.91]
   vnmgr: [192.168.2.91]
-  vna: [192.168.2.91, 192.168.2.92, 192.168.2.93, 192.168.2.90]
+  vna: [192.168.2.91, 192.168.2.92, 192.168.2.93, 192.168.2.90, 192.168.2.96]
 
 webapi:
   host: 192.168.2.91
