--- a/integration_test/dataset/simple_seg.yml
+++ b/integration_test/dataset/simple_seg.yml
@@ -10,32 +10,32 @@ interfaces:
 
   - uuid: if-v1
     port_name: if-v1
-    segment_uuid: seg-vseg1
+#    segment_uuid: seg-vseg1
     mac_address: "02:00:00:00:00:01"
 
   - uuid: if-v2
     port_name: if-v2
-    segment_uuid: seg-vseg2
+#    segment_uuid: seg-vseg2
     mac_address: "02:00:00:00:00:02"
 
   - uuid: if-v3
     port_name: if-v3
-    segment_uuid: seg-vseg1
+#    segment_uuid: seg-vseg1
     mac_address: "02:00:00:00:00:03"
 
   - uuid: if-v4
     port_name: if-v4
-    segment_uuid: seg-vseg2
+#    segment_uuid: seg-vseg2
     mac_address: "02:00:00:00:00:04"
 
   - uuid: if-v5
     port_name: if-v5
-    segment_uuid: seg-vseg1
+#    segment_uuid: seg-vseg1
     mac_address: "02:00:00:00:00:05"
 
   - uuid: if-v6
     port_name: if-v6
-    segment_uuid: seg-vseg2
+#    segment_uuid: seg-vseg2
     mac_address: "02:00:00:00:00:06"
 
 # datapath_segments:
