--- a/integration_test/config/base.yml
+++ b/integration_test/config/base.yml
@@ -1,7 +1,8 @@
 vm_type: :kvm
 #specs: [simple, simple_tp, simple_seg, router_v2v, router_p2v, router_v2v_tp, event, event_tp, service, secg, secg_reference, filter, wanedge]
 
-specs: [wanedge, simple, router_v2v, event, service, filter]
+#specs: [wanedge, simple, router_v2v, event, service, filter]
+specs: [simple, wanedge]
 
 
 # specs not included
