--- a/integration_test/config/base.yml
+++ b/integration_test/config/base.yml
@@ -58,3 +58,10 @@ vms:
     interfaces:
       - uuid: if-v6
         name: eth0
+  vm7:
+    name: vm7
+    vna: 6
+    ssh_ip: 10.50.0.107
+    interfaces:
+      - uuid: if-v7
+        name: eth0
