--- a/integration_test/config/dev.yml
+++ b/integration_test/config/dev.yml
@@ -2,7 +2,7 @@ specs_ext: [edge]
 nodes:
   webapi: [192.168.3.91]
   vnmgr: [192.168.3.91]
-  vna: [192.168.3.91, 192.168.3.92, 192.168.3.93, 192.168.3.90]
+  vna: [192.168.3.91, 192.168.3.92, 192.168.3.93, 192.168.3.90, 192.168.3.96]
 
 webapi:
   host: 192.168.3.91
