--- a/integration_test/dataset/promiscuous.yml
+++ b/integration_test/dataset/promiscuous.yml
@@ -58,19 +58,14 @@ datapath_networks:
   - datapath_uuid: dp-1
     network_uuid: nw-global
     interface_uuid: if-dp1eth0
-    mac_address: "02:00:00:aa:00:01"
+    mac_address: "02:00:00:aa:02:01"
 
-  - datapath_uuid: dp-1
+  - datapath_uuid: dp-wanedge
     network_uuid: nw-public1
     interface_uuid: if-weth0
-    mac_address: "02:00:00:aa:00:02"
+    mac_address: "02:00:00:ee:01:01"
 
   - datapath_uuid: dp-wanedge
     network_uuid: nw-global
     interface_uuid: if-weth0
-    mac_address: "02:00:00:aa:01:01"
-
-  - datapath_uuid: dp-wanedge
-    network_uuid: nw-public1
-    interface_uuid: if-weth0
-    mac_address: "02:00:00:aa:01:02"
+    mac_address: "02:00:00:ee:02:01"
