--- a/integration_test/dataset/wanedge.yml
+++ b/integration_test/dataset/wanedge.yml
@@ -91,25 +91,20 @@ datapath_networks:
     interface_uuid: if-dp1eth0
     mac_address: "02:00:00:aa:00:01"
 
-  - datapath_uuid: dp-1
-    network_uuid: nw-public1
-    interface_uuid: if-weth0
-    mac_address: "02:00:00:aa:00:02"
-
   - datapath_uuid: dp-wanedge
     network_uuid: nw-vnet1
     interface_uuid: if-weth0
-    mac_address: "02:00:00:aa:01:01"
+    mac_address: "02:00:00:ee:00:01"
 
   - datapath_uuid: dp-wanedge
     network_uuid: nw-public1
     interface_uuid: if-weth0
-    mac_address: "02:00:00:aa:01:02"
+    mac_address: "02:00:00:ee:01:01"
 
   - datapath_uuid: dp-wanedge
     network_uuid: nw-global
     interface_uuid: if-weth2
-    mac_address: "02:00:00:aa:01:03"
+    mac_address: "02:00:00:ee:02:01"
 
 route_links:
 
