--- a/deployment/conf_files/etc/openvnet/vna.conf
+++ b/deployment/conf_files/etc/openvnet/vna.conf
@@ -35,3 +35,22 @@ network {
     address ""
   }
 }
+
+#
+# switch : The switch for VNA to connect when using the ovs-ofctl or ovs-vsctl commands.
+#          This is intended to be used when VNA needs to take control of an OVS running on a different host.
+#          If not provided VNA will use the Datapath ID in the database to connect to the correct local OVS.
+#
+#          Example: 'tcp:192.168.3.101:6653'
+#
+
+#switch ''
+
+#
+# ovsdb : This option can be used to make VNA connect to a remote OVSDB running on another host. If OVSDB is
+#         running locally which is the most common case, this option can be omitted.
+#
+#         Example: 'tcp:192.168.3.101:6640'
+#
+
+#ovsdb ''
