--- a/integration_test/config/base.yml
+++ b/integration_test/config/base.yml
@@ -1,7 +1,8 @@
 vm_type: :kvm
 # specs: [promiscuous_nw, promiscuous_seg, simple, simple_tp, simple_seg, router_v2v, router_p2v, router_v2v_tp, event, event_tp, service, secg, secg_reference, filter, wanedge]
 
-specs: [promiscuous_nw, promiscuous_seg, wanedge, simple]
+# specs: [promiscuous_nw, promiscuous_seg, wanedge, simple]
+specs: [wanedge]
 
 # specs not included
 # [edge, edge_esxi, vxlan, lease_policy]
