Revised the comments for the new options in vna.conf

--- a/deployment/conf_files/etc/openvnet/vna.conf
+++ b/deployment/conf_files/etc/openvnet/vna.conf
@@ -38,10 +38,23 @@ network {
 
 #
 # switch : The switch for VNA to connect when using the ovs-ofctl or ovs-vsctl commands.
-#          This is intended to be used when VNA needs to take control of an OVS running on a different host.
-#          If not provided VNA will use the Datapath ID in the database to connect to the correct local OVS.
+#          If not provided VNA will use the Datapath ID in the database to looks for an instance of OVS
+#          running on the same host as VNA.
+#
+#          The value of `switch` will be fed directly to the ovs-ofctl command and thus supports any format
+#          that ovs-ofctl can take.
+#
+#          ssl:ip[:port]
+#          tcp:ip[:port]
+#          unix:file
+#          bridge
+#          [type@]dp
 #
 #          Example: 'tcp:192.168.3.101:6653'
+#          Example: 'ssl:172.16.15.100:6653'
+#          Example: 'br1'
+#
+#          Check the ovs-ofctl man page for more details.
 #
 
 #switch ''
@@ -50,7 +63,21 @@ network {
 # ovsdb : This option can be used to make VNA connect to a remote OVSDB running on another host. If OVSDB is
 #         running locally which is the most common case, this option can be omitted.
 #
+#         The value of `ovsdb` will be fed directly to the ovs-vsctl command's --db= parameter. Therefore it
+#         supports any format `ovs-vsctl --db=` supports
+#
+#         ssl:ip:port
+#         tcp:ip:port
+#         unix:file
+#         pssl:port[:ip]
+#            The  --private-key, --certificate, and
+#            --ca-cert options are mandatory when this form is used.
+#         ptcp:port[:ip]
+#         punix:file
+#
 #         Example: 'tcp:192.168.3.101:6640'
+#
+#         Check the ovs-vsctl man page for more details.
 #
 
 #ovsdb ''
