--- a/deployment/conf.el7/usr/lib/systemd/system/vnet-vnmgr.service
+++ b/deployment/conf.el7/usr/lib/systemd/system/vnet-vnmgr.service
@@ -6,7 +6,7 @@ After=network.target
 EnvironmentFile=/etc/sysconfig/openvnet
 User=vnet-vnmgr
 WorkingDirectory=${VNET_ROOT}/vnet
-ExecStart=/opt/axsh/openvnet/ruby/bin/bundle exec ./bin/vnmgr >> ${LOG_DIRECTORY}/vnmgr.log
+ExecStart=/usr/bin/scl enable rh-ruby23 -- bundle exec ./bin/vnmgr >> ${LOG_DIRECTORY}/vnmgr.log
 
 [Install]
 WantedBy=multi-user.target
