--- a/deployment/conf.el7/usr/lib/systemd/system/vnet-webapi.service
+++ b/deployment/conf.el7/usr/lib/systemd/system/vnet-webapi.service
@@ -7,7 +7,7 @@ EnvironmentFile=/etc/sysconfig/openvnet
 Environment=BIND_ADDR=0.0.0.0 PORT=9090 RACK_ENV=production
 User=vnet-webapi
 WorkingDirectory=${VNET_ROOT}/vnet
-ExecStart=/opt/axsh/openvnet/ruby/bin/bundle exec unicorn -o ${BIND_ADDR} -p ${PORT} ./rack/config-webapi.ru >> ${LOG_DIRECTORY}/webapi.log
+ExecStart=/usr/bin/scl enable rh-ruby23 -- bundle exec unicorn -o ${BIND_ADDR} -p ${PORT} ./rack/config-webapi.ru >> ${LOG_DIRECTORY}/webapi.log
 
 
 [Install]
