--- a/integration_test/config/itest.yml
+++ b/integration_test/config/itest.yml
@@ -38,4 +38,7 @@ legacy_machines:
     ipv4_address: 10.101.0.100
 
 physical_network_gw_ip: 10.210.0.1
+physical_network_simulated_ip: 10.210.0.2
+physical_network_vm1_ip: 10.210.0.104
+physical_network_vm7_ip: 10.210.0.105
 pseudo_global_ip: 10.196.36.199
